Subindo atualização do sistema de cadastro do aplicativo